# echo-of-art

./: .gitignore  README.md  pyproject.toml  当日説明.md
documentation/: documentation.psd
echo_of_art/: _hello_argparse.py  _hello_delete.py  _pyaudio_devicelist.py  _pyaudio_info.py  constants.py  entity_a.py  entity_b.py  entity_c.py  entity_d.py  filter_blend_documentation.py  filter_blendvideo.py  filter_blendvideo_add.py  filter_blendvideo_hsv.py  filter_canny.py  filter_distance.py  filter_noop.py  filter_overlayaudiocallback.py  image_utils.py  receiver.py  runner.py  sender.py
